# Core6502

./: .gitignore  CMakeLists.txt  Core6502.cpp  Core6502.hpp  Core6502Operations.cpp  Core6502Operations.hpp  LICENSE  readme.md
.circleci/: config.yml
Core6502.xcodeproj/: project.pbxproj
Core6502.xcodeproj/project.xcworkspace/xcuserdata/evanstoddard.xcuserdatad/: UserInterfaceState.xcuserstate
Core6502.xcodeproj/xcuserdata/evanstoddard.xcuserdatad/xcschemes/: xcschememanagement.plist
examples/: CMakeLists.txt
examples/n_sum/: CMakeLists.txt
examples/simple/: CMakeLists.txt  main.cpp
include/: Core6502.hpp  Core6502Operations.hpp
src/: CMakeLists.txt  Core6502.cpp  Core6502Operations.cpp
tests/: CMakeLists.txt  Core6502Tests_ADC.cpp  Core6502Tests_AND.cpp  Core6502Tests_ASL.cpp  Core6502Tests_BIT.cpp  Core6502Tests_Base.cpp  Core6502Tests_Branch.cpp  Core6502Tests_CMP.cpp  Core6502Tests_CPX.cpp  Core6502Tests_CPY.cpp  Core6502Tests_Decrement.cpp  Core6502Tests_EOR.cpp  Core6502Tests_Increment.cpp  Core6502Tests_Jump.cpp  Core6502Tests_LDA.cpp  Core6502Tests_LDX.cpp  Core6502Tests_LDY.cpp  Core6502Tests_LSR.cpp  Core6502Tests_ORA.cpp  Core6502Tests_ROL.cpp  Core6502Tests_ROR.cpp  Core6502Tests_SBC.cpp  Core6502Tests_STA.cpp  Core6502Tests_STX.cpp  Core6502Tests_STY.cpp  Core6502Tests_StatusFlags.cpp  Core6502Tests_Transfer.cpp  Core6502Tests_core.cpp
